# defi-analytics

./: .coverage  .gitignore  README.md  project_structure  pyproject.toml  requirements.txt
src/: run_agent.py
src/agents/: base_agent.py  example_agent.py  example_injective_agent.py  reporter.py
src/allora/: client.py  interfaces.py  predictor.py
src/analysis/: mispricing.py
src/blockchain/: injective_client.py
src/config/: __init__.py  config_loader.py
src/http/: aiohttp_client.py
src/indexer/: injective.py  interfaces.py
src/interfaces/: iagent.py  iblockchain_client.py  ihttp_client.py  ipredictor.py
tests/: conftest.py
tests/unit/agents/: test_example_injective_agent.py
tests/unit/allora/: test_client.py  test_predictor.py
tests/unit/config/: test_config_loader.py
tests/unit/indexer/: test_injective.py
